# hotreloadcharm

./: .gitignore  CMakeLists.txt  FILTER_FORMULA.md  PLUGIN_EXAMPLE.cpp  PLUGIN_SYSTEM.md  README.md  README_PLUGIN_SYSTEM.md  README_PLUGIN_SYSTEM_UPDATED.md
hotload_modules/: README.md  delay_line.cpp  filter_plugin.cpp  gain_plugin.cpp
plugin_modules/: README.md  filter_plugin.cpp  gain_plugin.cpp
source/: CharmApp.cpp  CharmApp.h  JucePlatformLayer.cpp  JucePlatformLayer.h  PhasorClock.cpp  PhasorClock.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  hotreload_dsp.h  module_interface.h  module_loader.h  plugin_interface.h  plugin_loader.h  ui.cpp  ui.h  ui_impl.cpp  ui_impl.h
